# scc

./: CMakeLists.txt  README.md  main.cpp
headers/: FileUtils.h  StringUtils.h
